--- a/package.json
+++ b/package.json
@@ -24,6 +24,8 @@
   "devDependencies": {
     "bower": "^1.7.7",
     "gulp": "^3.9.1",
+    "gulp-autoprefixer": "^3.1.0",
+    "gulp-clean-css": "^2.0.2",
     "gulp-sass": "^2.2.0",
     "node-bourbon": "^4.2.3",
     "node-neat": "^1.7.2"
