--- a/bower.json
+++ b/bower.json
@@ -23,6 +23,7 @@
   ],
   "dependencies": {
     "angular-ui-router": "^0.2.18",
-    "angular": "^1.5.0"
+    "angular": "^1.5.0",
+    "jquery": "^2.2.1"
   }
 }
